fix: version picker moves with navbar on mobile

--- a/static/styles/version-picker.css
+++ b/static/styles/version-picker.css
@@ -66,3 +66,14 @@
 	font-weight: bold;
 	text-decoration: underline;
 }
+
+.nav-trigger:checked ~ .versions {
+    left: 0 !important;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 680px) {
+	.versions {
+		left: -250px;
+		transition: left 0.2s;
+	}
+}
